# learntree

./: README.md  app.py  pyproject.toml
instance/: learning_tree.db
templates/: add.html  base.html  index.html
